test/fail_compile/comment_open.tas
a <- 0
/* this comment never gets closed
